rnsc/test_data/rns_integration/error/lexer/quoted_identifiers/unsupported_octal_escape.rns
.class public Test
.code "\123"
